[release/publish-ta-au] Fix status validation modal position when Property Panel is collapsed

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -7113,6 +7113,10 @@ a.action-link:hover {
 	border-radius    : 4px 4px 0 0;
 }
 
+#status-bar-modal.toggle {
+	right: 0;
+}
+
 #status-bar-modal .modal-header {
 	background    : none;
 	box-shadow    : none;
